Fix margin that was causing alignment issue

--- a/styles/sections/_task_order.scss
+++ b/styles/sections/_task_order.scss
@@ -49,6 +49,10 @@
         top: 2.5rem;
         margin-left: -23rem;
       }
+
+      .usa-button {
+        margin: 0.5em;
+      }
     }
 
     p {
